# Tetris

./: .gitignore  README.md  modelisation.mdj
tetris/: .doxyfile  CMakeLists.txt
tetris/console/: CMakeLists.txt  main.cpp
tetris/console/view/: ConsoleTetrisObserver.cpp  ConsoleTetrisObserver.h
tetris/doxygen/html/: menudata.js
tetris/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_7.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  searchdata.js  variables_0.js  (+8 more)
tetris/gui/: CMakeLists.txt  TetrisController.cpp  TetrisController.h  configwindow.cpp  configwindow.h  configwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tetris/gui/colors/: Color.cpp  Color.h
tetris/gui/widget/: CaseWidget.cpp  CaseWidget.h  GameBoardWidget.cpp  GameBoardWidget.h  GameInfoWidget.cpp  GameInfoWidget.h
tetris/metier/: Bag.cpp  Bag.h  Board.cpp  Board.h  Brick.cpp  Brick.h  CMakeLists.txt  DefaultBrick.cpp  DefaultBrick.h  Direction2D.cpp  Direction2D.h  Position.cpp  Position.h  Random.hpp  Tetris.cpp  Tetris.h  main_model.cpp
tetris/metier/dp/: Observable.cpp  Observable.h  Observer.h
tetris/tests/: Bag_tests.cpp  Board_tests.cpp  Brick_tests.cpp  CMakeLists.txt  Tetris_tests.cpp
